<resources>

    <!-- Common -->
    <string name="app_name">Recommend</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="generic_error">Something wrong happened. Please try again.</string>
    <string name="email_error">Please insert a valid email.</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>

    <string name="new_screen">New</string>

    <!-- LoginScreen -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_details">Enter your login details</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recovery_email_sent">Check your inbox for the recovery email</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="success_sign_in">Success</string>
    <string name="error_sign_in">Error</string>
    <string name="reset_password">Reset password</string>

    <!-- SignUpScreen -->
    <string name="sign_up_button">Sign up</string>
    <string name="password_error">Your password should have at least six letters, including minimum one digit, one lower case letter and one upper case letter</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="success_sign_up">Success</string>
    <string name="error_sign_up">Error</string>

    <!-- Navigation -->
    <string name="navigation_title_home_screen">Home</string>
    <string name="navigation_title_feed_screen">Feed</string>
    <string name="navigation_title_search_screen">Search</string>
    <string name="navigation_title_profile_screen">Profile</string>
    <string name="navigation_route_home_screen" translatable="false">home_screen</string>
    <string name="navigation_route_feed_screen" translatable="false">feed_screen</string>
    <string name="navigation_route_search_screen" translatable="false">search_screen</string>
    <string name="navigation_route_profile_screen" translatable="false">profile_screen</string>

    <!-- SettingsScreen -->
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_my_account">Delete my account</string>

    <!-- Dialogs -->
    <string name="sign_out_title">Sign out?</string>
    <string name="sign_out_description">You will have to sign in again to see your tasks.</string>
    <string name="delete_account_title">Delete account?</string>
    <string name="delete_account_description">You will lose all your tasks and your account will be deleted. This action is irreversible.</string>

    <!-- FCM -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="request_notification_permission">Request permission</string>
    <string name="notification_permission_title">Notification permission</string>
    <string name="notification_permission_description">The notification permission is important for this app. Please grant the permission.</string>
    <string name="notification_permission_settings">The notification permission is important for this app. Please navigate to your device settings and enable notifications for Make it So.</string>

    <string name="goes_online_toast">You\'re online now!</string>
    <string name="goes_offline_toast">Problems with network!</string>

    <string name="error_cover_type">Wrong cover type</string>
    <string name="error_category_type">Wrong category type</string>

    <string name="error_feed">Has no feed!</string>

    <string name="like_exception">Like error</string>
    <string name="repost_exception">Repost error</string>
    <string name="comment_exception">Comment error</string>

    <string name="create_account_button">Create account</string>

    <string name="create_account_name_error">Cannot be blank and can contain up to 45 symbols</string>
    <string name="create_account_nickname_error">Cannot be blank, can contain up to 30 symbols and can contain letters, numbers and underscores</string>
    <string name="create_account_bio_error">Can contain up to 240 symbols</string>
    <string name="create_account_gender_error">Cannot be blank</string>
    <string name="create_account_date_of_birth_error">Cannot be blank</string>

    <string name="create_account_uploading_photo_error">Error while uploading photo</string>
    <string name="create_account_uploading_user_info_error">Error while uploading account data</string>
</resources>