...
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.text.input.PasswordVisualTransformation
import androidx.compose.ui.text.input.VisualTransformation
import com.serj.recommend.android.R

val AUTHENTICATION_VISIBILITY_PASSWORD_BUTTON_TT = "authenticationVisibilityPasswordButtonTT"
val AUTHENTICATION_PASSWORD_FIELD_TT = "authenticationPasswordFieldTT"

@Composable
fun PasswordField(
    value: String,
    @StringRes placeholder: Int,
    onNewValue: (String) -> Unit,
...
        onValueChange = { onNewValue(it) },
        placeholder = { Text(text = stringResource(placeholder)) },
        leadingIcon = { Icon(imageVector = Icons.Default.Lock, contentDescription = "Lock") },
        trailingIcon = {
            IconButton(onClick = { isVisible = !isVisible }) {
                Icon(painter = icon,
                     contentDescription = "Visibility",
                     modifier = modifier.testTag(AUTHENTICATION_VISIBILITY_PASSWORD_BUTTON_TT))
            }
        },
        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
        visualTransformation = visualTransformation,
        maxLines = 1
...
